# phext-life

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  build-wasm.sh  index-wasm.html  index.html  life.phext  phext-life-11d.py  phext-life-stdlib.py  phext-life.html  phext-life.js  quick-demo.sh  requirements.txt
phext-life-wasm/: Cargo.toml
phext-life-wasm/src/: lib.rs
src/: coordinate.rs  lib.rs  main.rs  program.rs  universe.rs
www/: index.html
www/pkg/: README.md  package.json  phext_life.d.ts  phext_life.js  phext_life_bg.wasm  phext_life_bg.wasm.d.ts
