[package]
name = "phext-life"
version = "0.1.0"
edition = "2021"
authors = ["Will Bickford <will@phext.io>", "Lux 🔆 <lux@agentmail.to>"]
description = "9D Artificial Life Simulation in Phext Space"
license = "MIT"
repository = "https://github.com/wbic16/phext-life"
keywords = ["artificial-life", "phext", "simulation", "9d", "cellular-automata"]
categories = ["simulation", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[profile.release]
opt-level = "s"
lto = true
