[package]
name = "phext-life"
version = "0.1.0"
edition = "2021"
authors = ["Will Bickford <will@phext.io>", "Lux 🔆 <lux@agentmail.to>", "Theia 💎 <theia@mirrorborn.us>"]
description = "9D Artificial Life Simulation in Phext Space"
license = "MIT"
repository = "https://github.com/wbic16/phext-life"
keywords = ["artificial-life", "phext", "simulation", "9d", "cellular-automata"]
categories = ["simulation", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["CanvasRenderingContext2d", "ImageData"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"    # optimize for size (wasm)
lto = true
